# DIY-Sim-Racing-Setup

./: CMakeLists.txt  README.md
BOM/: BOM.csv  README.md
CAD/: Pedal Assembly.step  README.md  Wheel Assembly.step  onshape.txt
CAD/CAD Imports/: 5537T011_T-Slotted Framing (1).step  5537T011_T-Slotted Framing.STEP.x_t  6001ZZ Bearing.SLDPRT.step  Nema24_ClosedLoop.step  Nema24_ClosedLoop.x_t  Part Studio 2.step  e38s6g5 600b g24n.step  e38s6g5 600b g24n.x_t
CAD/Pedal/: Encoder Gears.step  Pedal (1).step  Pedal Base.step  Pedal Encoder Gear.step
CAD/Wheel/: Hub Adapter.step  Motor Pulley.step  Rear Motor Mount.step  Shaft Gear.step  Steering Column Front Mount.step  Steering Column Rear Mount.step  Table Mount.step
firmware/: CMakeLists.txt  README.md  pedal.cpp
firmware/ESP32/: sketch_jun11d.ino
firmware/STM32F411RE/: Encoder.cpp  Encoder.h  FfbEngine.cpp  FfbEngine.h  FfbReportHandler.cpp  FfbReportHandler.h  HIDReportType.h  WHID.cpp  WHID.h  WheelConfig.cpp  WheelConfig.h  uart.ino
